--- a/src/main/webapp/app/entities/core/dega-user/dega-user.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user.component.html
@@ -1,103 +1,297 @@
-<div>
-    <h2 id="page-heading">
-        <span jhiTranslate="gatewayApp.coreDegaUser.home.title">Dega Users</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-dega-user" [routerLink]="['/dega-user/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreDegaUser.home.createLabel">
-            Create new Dega User
-            </span>
-        </button>
-    </h2>
-    <jhi-alert></jhi-alert>
-    <div class="row">
-        <div class="col-sm-12">
-            <form name="searchForm" class="form-inline">
-                <div class="input-group w-100 mt-3">
-                    <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'gatewayApp.coreDegaUser.home.search' | translate }}">
-                    <button class="input-group-append btn btn-info" (click)="search(currentSearch)">
-                        <fa-icon [icon]="'search'"></fa-icon>
-                    </button>
-                    <button class="input-group-append btn btn-danger" (click)="clear()" *ngIf="currentSearch">
-                        <fa-icon [icon]="'trash-alt'"></fa-icon>
+<div class="table-view-page p-2">
+    <div class="row mt-5">
+        <div class="col-md-5">
+            <h2 id="page-heading">
+                <span jhiTranslate="gatewayApp.coreDegaUser.home.title">Organization</span>
+            </h2>
+        </div>
+        <div class="col-md-7">
+            <form
+                name="searchForm"
+                class="d-flex align-content-center justify-content-end"
+            >
+                <mat-form-field>
+                    <input
+                        type="text"
+                        matInput
+                        [(ngModel)]="currentSearch"
+                        id="currentSearch"
+                        name="currentSearch"
+                        placeholder="{{ 'gatewayApp.coreDegaUser.home.search' | translate }}"
+                    >
+                </mat-form-field>
+                <button
+                    mat-icon-button
+                    mat-raised-button
+                    class="mr-2"
+                    (click)="search(currentSearch)"
+                >
+                    <fa-icon [icon]="'search'"></fa-icon>
+                </button>
+                <button
+                    mat-icon-button
+                    mat-raised-button
+                    color="warn"
+                    class="mr-3"
+                    (click)="clear()"
+                    *ngIf="currentSearch"
+                >
+                    <fa-icon [icon]="'trash-alt'"></fa-icon>
+                </button>
+                <div>
+                    <button
+                        mat-raised-button
+                        color="primary"
+                        id="jh-create-entity"
+                        [routerLink]="['/dega-user/new']"
+                    >
+                        <fa-icon [icon]="'plus'"></fa-icon>
+                        <span
+                            class="hidden-sm-down"
+                            jhiTranslate="gatewayApp.coreDegaUser.home.createLabel"
+                        >
+                            Create new Role Mapping
+                        </span>
                     </button>
                 </div>
             </form>
         </div>
     </div>
-    <br/>
-    <div class="table-responsive" *ngIf="degaUsers">
-        <table class="table table-striped">
-            <thead>
-            <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th jhiSortBy="profilePicture"><span jhiTranslate="gatewayApp.coreDegaUser.profilePicture">Profile Picture</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="displayName"><span jhiTranslate="gatewayApp.coreDegaUser.displayName">Display Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="enabled"><span jhiTranslate="gatewayApp.coreDegaUser.enabled">Enabled</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="emailVerified"><span jhiTranslate="gatewayApp.coreDegaUser.emailVerified">Email Verified</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="email"><span jhiTranslate="gatewayApp.coreDegaUser.email">Email</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.coreDegaUser.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="roleName"><span jhiTranslate="gatewayApp.coreDegaUser.role">Role</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="organizationDefaultName"><span jhiTranslate="gatewayApp.coreDegaUser.organizationDefault">Organization Default</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="organizationCurrentName"><span jhiTranslate="gatewayApp.coreDegaUser.organizationCurrent">Organization Current</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let degaUser of degaUsers ;trackBy: trackId">
-                <td><img *ngIf="degaUser.media" src="{{degaUser.media.sourceURL}}?resize:fill:100:100/gravity:sm" alt="" width="100" height="100"></td>
-                <td>{{degaUser.displayName}}</td>
-                <td>{{degaUser.enabled}}</td>
-                <td>{{degaUser.emailVerified}}</td>
-                <td>{{degaUser.email}}</td>
-                <td>{{degaUser.createdDate | date:'medium'}}</td>
-                <td>
-                    <div *ngIf="degaUser.roleId">
-                        <a [routerLink]="['../role', degaUser.roleId , 'view' ]" >{{degaUser.roleName}}</a>
-                    </div>
-                </td>
-                <td>
-                    <div *ngIf="degaUser.organizationDefaultId">
-                        <a [routerLink]="['../organization', degaUser.organizationDefaultId , 'view' ]" >{{degaUser.organizationDefaultName}}</a>
-                    </div>
-                </td>
-                <td>
-                    <div *ngIf="degaUser.organizationCurrentId">
-                        <a [routerLink]="['../organization', degaUser.organizationCurrentId , 'view' ]" >{{degaUser.organizationCurrentName}}</a>
-                    </div>
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['/dega-user', degaUser.id, 'view' ]"
-                                class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/dega-user', degaUser.id, 'edit']"
-                                class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'dega-user/'+ degaUser.id + '/delete'} }]"
+    <jhi-alert></jhi-alert>
+    <div class="row">
+        <div
+            class="table-responsive col-md-12"
+            *ngIf="degaUsers"
+            jhiSort
+            [(predicate)]="predicate"
+            [(ascending)]="reverse"
+            [callback]="transition.bind(this)"
+        >
+            <table
+                mat-table
+                [dataSource]="degaUsers"
+                class="mat-elevation-z8 shadow-table full-width alternate-color box-shadow-2"
+            >
+                <ng-container matColumnDef="profilePicture">
+                    <th
+                        jhiSortBy="profilePicture"
+                        mat-header-cell
+                        *matHeaderCellDef
+                    >
+                        <span jhiTranslate="gatewayApp.coreDegaUser.profilePicture">Profile Picture</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        <img
+                            *ngIf="element.media"
+                            src="{{element.media.sourceURL}}?resize:fill:100:100/gravity:sm"
+                            alt
+                            width="100"
+                            height="100"
+                        >
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="displayName">
+                    <th
+                        jhiSortBy="displayName"
+                        mat-header-cell
+                        *matHeaderCellDef
+                    >
+                        <span jhiTranslate="gatewayApp.coreDegaUser.displayName">Display Name</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        {{element.displayName}}
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="enabled">
+                    <th
+                        jhiSortBy="enabled"
+                        mat-header-cell
+                        *matHeaderCellDef
+                    >
+                        <span jhiTranslate="gatewayApp.coreDegaUser.enabled">Enabled</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        {{element.enabled}}
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="emailVerified">
+                    <th
+                        jhiSortBy="emailVerified"
+                        mat-header-cell
+                        *matHeaderCellDef
+                    >
+                        <span jhiTranslate="gatewayApp.coreDegaUser.emailVerified">Email Verified</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        {{element.emailVerified}}
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="email">
+                    <th
+                        jhiSortBy="email"
+                        mat-header-cell
+                        *matHeaderCellDef
+                    >
+                        <span jhiTranslate="gatewayApp.coreDegaUser.email">Email</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        {{element.email}}
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="createdDate">
+                    <th
+                        jhiSortBy="createdDate"
+                        mat-header-cell
+                        *matHeaderCellDef
+                    >
+                        <span jhiTranslate="gatewayApp.coreDegaUser.createdDate">Created Date</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        {{element.createdDate}}
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="roleName">
+                    <th
+                        jhiSortBy="roleName"
+                        mat-header-cell
+                        *matHeaderCellDef
+                    >
+                        <span jhiTranslate="gatewayApp.coreDegaUser.role">Role</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        <div *ngIf="element.roleId">
+                            <a [routerLink]="['../role', element.roleId , 'view' ]">{{element.roleName}}</a>
+                        </div>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="organizationDefaultName">
+                    <th
+                        jhiSortBy="organizationDefaultName"
+                        mat-header-cell
+                        *matHeaderCellDef
+                    >
+                        <span jhiTranslate="gatewayApp.coreDegaUser.organizationDefault">Organization Default</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        <div *ngIf="element.organizationDefaultId">
+                            <a [routerLink]="['../organization', element.organizationDefaultId , 'view' ]">{{element.organizationDefaultName}}</a>
+                        </div>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="organizationCurrentName">
+                    <th
+                        jhiSortBy="organizationCurrentName"
+                        mat-header-cell
+                        *matHeaderCellDef
+                    >
+                        <span jhiTranslate="gatewayApp.coreDegaUser.organizationCurrent">Organization Current</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        <div *ngIf="element.organizationCurrentId">
+                            <a [routerLink]="['../organization', element.organizationCurrentId , 'view' ]">{{element.organizationCurrentName}}</a>
+                        </div>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="actions">
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        class="action-column"
+                    >
+                        Actions
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                    >
+                        <div class="action-button-container">
+                            <div [routerLink]="['/dega-user', element.id, 'view' ]">
+                                <fa-icon [icon]="'eye'"></fa-icon>
+                            </div>
+                            <div [routerLink]="['/dega-user', element.id, 'edit']">
+                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                            </div>
+                            <div
+                                [routerLink]="['/', { outlets: { popup: 'dega-user/'+ element.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
-                                class="btn btn-danger btn-sm">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                            >
+                                <fa-icon [icon]="'times'"></fa-icon>
+                            </div>
+                        </div>
+                    </td>
+                </ng-container>
+                <tbody>
+                    <tr
+                        mat-header-row
+                        *matHeaderRowDef="displayedColumns"
+                    ></tr>
+                    <tr
+                        mat-row
+                        *matRowDef="let row; columns: displayedColumns;"
+                    ></tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <div *ngIf="degaUsers && degaUsers.length">
         <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="queryCount" [maxSize]="5" [itemsPerPage]="itemsPerPage"></jhi-item-count>
+            <jhi-item-count
+                [page]="page"
+                [total]="queryCount"
+                [maxSize]="5"
+                [itemsPerPage]="itemsPerPage"
+            ></jhi-item-count>
         </div>
         <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
+            <ngb-pagination
+                [collectionSize]="totalItems"
+                [(page)]="page"
+                [pageSize]="itemsPerPage"
+                [maxSize]="5"
+                [rotate]="true"
+                [boundaryLinks]="true"
+                (pageChange)="loadPage(page)"
+            ></ngb-pagination>
         </div>
     </div>
 </div>
