--- a/src/main/webapp/app/entities/core/role-mapping/role-mapping-detail.component.html
+++ b/src/main/webapp/app/entities/core/role-mapping/role-mapping-detail.component.html
@@ -1,39 +1,73 @@
-<div class="row justify-content-center">
-    <div class="col-8">
-        <div *ngIf="roleMapping">
-            <h2><span jhiTranslate="gatewayApp.coreRoleMapping.detail.title">Role Mapping</span> {{roleMapping.id}}</h2>
-            <hr>
-            <jhi-alert-error></jhi-alert-error>
-            <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="gatewayApp.coreRoleMapping.name">Name</span></dt>
-                <dd>
-                    <span>{{roleMapping.name}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreRoleMapping.organization">Organization</span></dt>
-                <dd>
-                    <div *ngIf="roleMapping.organizationId">
-                        <a [routerLink]="['/organization', roleMapping.organizationId, 'view']">{{roleMapping.organizationName}}</a>
-                    </div>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreRoleMapping.role">Role</span></dt>
-                <dd>
-                    <div *ngIf="roleMapping.roleId">
-                        <a [routerLink]="['/role', roleMapping.roleId, 'view']">{{roleMapping.roleName}}</a>
-                    </div>
-                </dd>
-            </dl>
+<div class="detail-view-page">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <div *ngIf="roleMapping">
+                <h2>
+                    <span jhiTranslate="gatewayApp.coreRoleMapping.detail.title">Role Mapping</span>
+                </h2>
+                <jhi-alert-error></jhi-alert-error>
+                <div class="table-wrap">
+                    <table class="row-md jh-entity-details">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <span>Role Mapping Id</span>
+                                </td>
+                                <td>
+                                    <span>{{roleMapping.id}}</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span jhiTranslate="gatewayApp.coreRoleMapping.name">Name</span>
+                                </td>
+                                <td>
+                                    <span>{{roleMapping.name}}</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span jhiTranslate="gatewayApp.coreRoleMapping.organization">Organization</span>
+                                </td>
+                                <td>
+                                    <span>{{roleMapping.organizationName}}</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span jhiTranslate="gatewayApp.coreRoleMapping.role">Role</span>
+                                </td>
+                                <td>
+                                    <span>{{roleMapping.roleName}}</span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button
+                        type="submit"
+                        mat-raised-button
+                        class="mr-2"
+                        (click)="previousState()"
+                    >
+                        <fa-icon [icon]="'arrow-left'"></fa-icon>
+                        &nbsp;
+                        <span jhiTranslate="entity.action.back">Back</span>
+                    </button>
 
-            <button type="submit"
-                    (click)="previousState()"
-                    class="btn btn-info">
-                <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
-            </button>
-
-            <button type="button"
-                    [routerLink]="['/role-mapping', roleMapping.id, 'edit']"
-                    class="btn btn-primary">
-                <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
-            </button>
+                    <button
+                        type="button"
+                        mat-raised-button
+                        color="primary"
+                        [routerLink]="['/role-mapping', roleMapping.id, 'edit']"
+                    >
+                        <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                        &nbsp;
+                        <span jhiTranslate="entity.action.edit">Edit</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
