added factcheck copy logic

--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
@@ -60,6 +60,15 @@
                                 </span>
                             </div>
                             <div>
+                                <span matTooltip="Create a copy of Factcheck"
+                                      (click)="openCopyDialogPopUp(factcheck)"
+                                      [matTooltipPosition]="'above'">
+                                    <fa-icon [icon]="'copy'">
+                                    </fa-icon>
+                                </span>
+                            </div>
+
+                            <div>
                                 <span matTooltip="Edit Factcheck"
                                       [matTooltipPosition]="'above'">
                                     <fa-icon [icon]="'pencil-alt'"
