updated the media upload flow

--- a/src/main/webapp/app/entities/core/media/media-update.component.html
+++ b/src/main/webapp/app/entities/core/media/media-update.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
-            <h2 id="jhi-media-heading" jhiTranslate="gatewayApp.coreMedia.home.createOrEditLabel">Create or edit a Media</h2>
+            <h2 id="jhi-media-heading" jhiTranslate="gatewayApp.coreMedia.home.createOrEditLabel">Create a Media</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <div class="form-group" [hidden]="!media.id">
